backend/seller-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seller-service
  labels:
    app: seller-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: seller-service
  template:
    metadata:
      labels:
        app: seller-service
    spec:
      serviceAccountName: seller-service
      containers:
        - name: seller-service
          image: amazon-clone/seller-service:latest
          ports:
            - containerPort: 8016
          readinessProbe:
            httpGet:
              path: /readyz/
              port: 8016
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8016
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
