backend/seller-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seller-service
  labels:
    app: seller-service
spec:
  selector:
    app: seller-service
  ports:
    - port: 80
      targetPort: 8016
      protocol: TCP
  type: ClusterIP
